force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/SPEN_EmailRoutingConfigurationSW__mdt.object-meta.xml
<CustomObject>
    <label>Email Routing Configuration SW</label>
    <pluralLabel>Email Routing Configuration SW</pluralLabel>
</CustomObject>