force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/Matcher_String_2__c.field-meta.xml
<CustomField>
    <fullName>Matcher_String_2__c</fullName>
    <label>Matcher String 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>