force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/Matcher_String__c.field-meta.xml
<CustomField>
    <fullName>Matcher_String__c</fullName>
    <description>Matching string or regex for particular queue</description>
    <label>Matcher String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>