force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/SPEN_HeaderSubject__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HeaderSubject__c</fullName>
    <label>Header Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
                <default>true</default>
                <label>Subject</label>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>