force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/SPEN_Priority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>