force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/SPEN_QueueName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_QueueName__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>