force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/SPEN_RoutingOutcome__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RoutingOutcome__c</fullName>
    <label>Email Routing Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Min SLA North</fullName>
            </value>
            <value>
                <fullName>30 Min SLA South</fullName>
            </value>
            <value>
                <fullName>1 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>1 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>7 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>7 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>72 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>72 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>2 hr SLA North</fullName>
            </value>
            <value>
                <fullName>2 hr SLA South</fullName>
            </value>
            <value>
                <fullName>8 hr SLA North</fullName>
            </value>
            <value>
                <fullName>8 hr SLA South</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA North-Lowest</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA South-Lowest</fullName>
            </value>
            <value>
                <fullName>Jointing Complete - South</fullName>
            </value>
            <value>
                <fullName>Streetworks Additional - North - High</fullName>
            </value>
            <value>
                <fullName>Streetworks Openings - North</fullName>
            </value>
            <value>
                <fullName>Streetworks Openings - North - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>