force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/fields/SPEN_ToAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ToAddress__c</fullName>
    <label>SPEN_ToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>