force-app/main/default/objects/SPEN_EmailRoutingConfigurationSW__mdt/listViews/record_view.listView-meta.xml
<ListView>
    <fullName>record_view</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SPEN_QueueName__c</columns>
    <columns>SPEN_RoutingOutcome__c</columns>
    <columns>SPEN_ToAddress__c</columns>
    <columns>Matcher_String__c</columns>
    <columns>Matcher_String_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>record view</label>
</ListView>